# RP2040-Lighthouse

./: .editorconfig  CMakeLists.txt
data/: single_ootx.txt
scripts/: build-local.sh  build.sh  flash.sh
src/: CMakeLists.txt  defines.h  main.c  pio_programs.c  pio_programs.h  sensor.c  sensor.h  sensor_state_machine.c  sensor_state_machine.h
src/pio/: CMakeLists.txt  ts4231.pio
